# database-quick-query

./: .gitignore  README.md  clean_connectors.py  pyproject.toml
dbqq/: __init__.py  utils.py
dbqq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dbqq/connectors/: __init__.py  _base.py  databricks.py  mssql.py  oracle.py
dbqq/security/: __init__.py
dbqq/security/functions/: _functions.py  _yaml.py
src/dbqq/: __init__.py  utils.py
src/dbqq/cli/: clean_connections.py  initialize_connections.py  run_query.py
src/dbqq/connectors/: __init__.py  _base.py  _polar_connector.py  databricks.py  mssql.py  oracle.py
src/dbqq/enums/: __init__.py
src/dbqq/enums/parsed/: sql.py
src/dbqq/security/: __init__.py  _cli_decrypt_yaml.py  _cli_encrypt_yaml.py  _cli_write_keys.py  helpers.py
src/dbqq/security/cli/: __init__.py  write_keys.py
src/dbqq/security/functions/: _functions.py  _yaml.py
tests/: dummy.dbqq  dummy.yaml
tests/connectors/: test_databricks.py  test_mssql.py  test_oracle.py  test_redshift.py
tests/keys/: private_key.pem  public_key.pem
tests/security/: shared.py  test_cli_encrypt_keys.py  test_cli_write_keys.py  test_encrypt_decrypt_yaml.py  test_rsahelper.py
tests/utils/: shared.py  test_common_table_expression.py  test_get_connector_details.py  test_parse_file.py  tests_get_ssm_connector_details.py
tests/utils/sql/: test_cache.sql  test_file.sql
